--- a/index.html
+++ b/index.html
@@ -282,17 +282,12 @@
             </div>
         </div>
     </section>
+    <div id="line"></div>
     <!--contact section-->
     <section class="contact" id="contact">
-        <h2 class="heading">Contact<span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
-        <form action="https://formsubmit.co/2e6726bddf28c66c8118a53d0be7c51d" method="POST">
+        <h2 class="heading">Contact<span>Me!</span><span class="animate scroll" style="--i:2;"></span></h2>
+        <form action="mailto:prakashjohn7878@gmail.com " method="post" enctype="text/plain">
             <!--honeypot-->
-            <input type="text" name="_honey" style="display:none;">
-
-            <!--Disable Captcha-->
-            <input type="hidden" name="_captcha" value="false">
-
-            <input type="hidden" name="_next" value="https://ravichandra938.github.io/Ravi-portfolio/success.html">
 
             <div class="input-box">
                 <div class="input-field">
@@ -328,7 +323,6 @@
             </div>
         </form>
     </section>
-
 
     <!--footer design-->
 
