--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>Portfolio</title>
+
     <link rel="stylesheet" href=" styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -87,7 +88,7 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2019- 2020</div>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2023- 2024</div>
                             <h3>Diploma - Aditya Surampalem.</h3>
                             <p> Aggregation :- 75%.</p>
                         </div>
@@ -95,7 +96,7 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2020 - 2021</div>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2024 - 2025</div>
                             <h3>Diploma - Aditya Surampalem.</h3>
                             <p>Aggregation :- 74%.</p>
                         </div>
@@ -103,12 +104,11 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2021 - 2022</div>
-                            <h3>Diploma - Andhra Kakinada.</h3>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2025 - 2026</div>
+                            <h3>Diploma - Aditya Surampalem.</h3>
                             <p>Aggregation :- Still Studying.</p>
                         </div>
                     </div>
-
                     <span class="animate scroll" style="--i:6;"></span>
                 </div>
             </div>
@@ -262,7 +262,7 @@
     <section class="projects" id="projects">
         <h2 class="heading">My<span>Projects</span><span class="animate scroll" style="--i:1;"></span></h2>
         <div class="projects-container">
-            <div class="projects-box">
+            <!-- <div class="projects-box">
                 <img src="hotel-management.png" width="300px" height="170px" alt="">
                 <div class="projects-layer">
                     <h4>Landing Page</h4>
@@ -279,7 +279,7 @@
                     <a href="https://santooo-coder.github.io/frontend/"><i class='bx bx-link-external'></i></a>
                 </div>
                 <span class="animate scroll" style="--i:3;"></span>
-            </div>
+            </div> -->
         </div>
     </section>
     <div id="line"></div>
